--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -159,8 +159,8 @@
         position: fixed;
         top: 0;
         left: 0;
-        min-width: 300px;
-        width: 50%;
+        width: 400px;
+        max-width: 70%;
         background-color: var(--dark-blue);
         padding: 30px;
         flex-direction: column;
@@ -170,6 +170,9 @@
         transform: translateX(-101%);
         transition: all 0.2s linear;
     }
+    .header_content .header_right_col_content.active {
+        transform: translateX(0);
+    }
     .header_content .header_menu ul {
         flex-direction: column;
         align-items: flex-start;
@@ -177,6 +180,7 @@
     body .header_content .header_menu ul li a {
         font-size: 16px;
         color: #fff;
+        justify-content: space-between;
     }
     .header_content .header_menu ul li a path {
         fill: #fff;
@@ -186,7 +190,13 @@
         display: block !important;
         position: static !important;
         text-align: left;
-        padding-top: 10px;
+        height: 0;
+        padding-top: 0 !important;
+    }
+    body .header_menu li.active_sub_menu a + .sub_menu, 
+    body .header_menu li.active_sub_menu .sub_menu {
+        height: auto;
+        padding-top: 10px !important;
     }
     .header_menu {
         width: 100%;
@@ -194,6 +204,7 @@
     .header_content .header_menu ul li {
         width: 100%;
         text-align: left;
+        overflow: hidden;
     }
     .header_content .header_menu ul.sub_menu li a {
         background-color: transparent;
@@ -223,5 +234,8 @@
     }
     body .header_content .header_logo img {
         width: 180px;
-    }    
+    }  
+    .header_content .header_right_col_content {
+        min-width: 250px;
+    }  
 }
