--- a/src/Components/Faqs/faqs.css
+++ b/src/Components/Faqs/faqs.css
@@ -11,6 +11,7 @@
     padding: 60px 50px;
     box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2);
     border-radius: 10px;
+    background-color: #fff;
 }
 .faq_item {
     border-bottom: 3px dashed #E2E8F2;
@@ -65,6 +66,11 @@
     }
 }
 
+@media (min-width:768px){
+    .faq_item:first-child {
+        padding-top: 0;
+    }
+}
 
 @media (max-width:767px){
     .faqs_list .faq_item .answer {
