I have added the loader on first time page load, created dynamic route for single blog page, change the static content of postfolios and some other pages

--- a/src/Components/BlogSidebar/blogSidebar.css
+++ b/src/Components/BlogSidebar/blogSidebar.css
@@ -72,6 +72,11 @@
     font-size: 20px;
     line-height: 1.8;
     font-weight: 600;
+    color: #000;
+    transition: all 0.2s linear;
+}
+.recent_news_item .news_title:hover {
+    color: var(--light-blue)
 }
 .recent_news_item .news_date {
     display: inline-flex;
