I have done the search result page fuctionality and made some small changes of designing

--- a/src/Components/BlogsCarousel/blogsCarousel.css
+++ b/src/Components/BlogsCarousel/blogsCarousel.css
@@ -20,6 +20,11 @@
     margin-top: 35px;
     padding-inline: 74px;
 }
+.blogs_carousel .owl-stage {
+    display: flex;
+    align-items: stretch;
+    padding-left: 2px;
+} 
 .blogs_carousel .owl-nav button {
     margin: 0 !important;
     position: absolute;
