--- a/src/Components/BlogBox/blogBox.css
+++ b/src/Components/BlogBox/blogBox.css
@@ -1,6 +1,9 @@
 .blog_item {
     border: 1px solid #D9D9D9;
     border-radius: 10px;
+    height: 100%;
+    position: relative;
+    padding-bottom: 80px;
 }
 .blog_img img {
     border-radius: 10px 10px 0 0;
@@ -10,7 +13,7 @@
 }
 .blog_title {
     font-size: 20px;
-    line-height: 1.8;
+    line-height: 1.6;
     font-weight: 600;
     color: var(--text-color);
 }
@@ -24,4 +27,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    position: absolute;
+    bottom: 20px;
+    width: calc(100% - 40px);
 }
