I have create a loading component, mega menu and some css changes in many components

--- a/src/Components/BlogSidebar/blogSidebar.css
+++ b/src/Components/BlogSidebar/blogSidebar.css
@@ -46,6 +46,7 @@
     justify-content: space-between;
     color: var(--text-color);
     line-height: 1.5;
+    cursor: auto;
 }
 .category_list_item a:hover {
     color: var(--light-blue);
