--- a/src/Components/Loading/loading.css
+++ b/src/Components/Loading/loading.css
@@ -1,17 +1,24 @@
-.loading_item {
-    text-align: center;
-    padding: 50px 0;
+.loading {
+  display: flex;
 }
+
+.loading_item {
+  text-align: center;
+  padding: 50px 0;
+}
+
 .lds-ripple,
 .lds-ripple div {
   box-sizing: border-box;
 }
+
 .lds-ripple {
   display: inline-block;
   position: relative;
   width: 80px;
   height: 80px;
 }
+
 .lds-ripple div {
   position: absolute;
   border: 4px solid var(--light-blue);
@@ -19,9 +26,11 @@
   border-radius: 50%;
   animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
 }
+
 .lds-ripple div:nth-child(2) {
   animation-delay: -0.5s;
 }
+
 @keyframes lds-ripple {
   0% {
     top: 36px;
@@ -30,6 +39,7 @@
     height: 8px;
     opacity: 0;
   }
+
   4.9% {
     top: 36px;
     left: 36px;
@@ -37,6 +47,7 @@
     height: 8px;
     opacity: 0;
   }
+
   5% {
     top: 36px;
     left: 36px;
@@ -44,6 +55,7 @@
     height: 8px;
     opacity: 1;
   }
+
   100% {
     top: 0;
     left: 0;
@@ -52,4 +64,3 @@
     opacity: 0;
   }
 }
-
